<resources>
    <string name="app_name">LibreriaYorkshin</string>
    <string name="usuario">Nombre de usuario</string>
    <string name="contrasenia">Contraseña</string>
    <string name="btnIngresar">Ingresar</string>
    <string name="Bienvenido">¡Bienvenido!</string>
    <string name="Registrarse">Crear cuenta</string>
    <string name="cliente">Cliente</string>
    <string name="tienda">Tienda</string>
    <string name="title_activity_crear_usuario">Crear usuario</string>
    <string name="nombre">Nombre del manga</string>
    <string name="precio">Precio</string>
    <string name="imagen">Imagen de referencia</string>
    <string name="disponibilidad">Disponibilidad</string>
    <string name="descripcion">Descripcion del manga</string>
    <string name="editorial">Editorial</string>
    <string name="recuperarcontrasena">Cambiar contraseña</string>
    <string name="reingresocontrasena">Reingrese la contraseña</string>
    <string name="mensaje">Has olvidado tu contraseña, aqui podras cambiarla</string>
    <string name="nuevacontra">Nueva contraseña</string>
    <string name="repnuevacontra">Repita la nueva contraseña</string>
    <string name="cambiar">Cambiar</string>
    <string name="cerrarseccion">Cerrar seccion</string>
    <string name="cargamangas">CARGA DE MANGAS</string>
    <string name="historialventa">HISTORIAL DE VENTAS</string>
    <string name="historial">Historial de venta</string>
    <string name="encuentranos">Encuentra tu tienda</string>
    <string name="compra">¡COMPRA TU MANGA SELLECIONADO AQUI!</string>
    <string name="tiendasCerca">TIENDAS CERCA DE TI</string>
    <string name="Subir_foto">Subir foto</string>
    <string name="sacar_foto">Sacar foto</string>
    <string name="mapa">ir al mapa</string>
    <string name="comprar">Comprar</string>
    <string name="cargar">Cargar</string>
    <string name="valor">$9990</string>
    <string name="tomo">Tomo N°22</string>
    <string name="anime">Jujutsu Kaisen</string>
    <string name="edito">Jump Comics</string>
    <string name="anime2">Hunter x Hunter</string>
    <string name="anime3">One Piece</string>
    <string name="anime4">Naruto</string>
    <string name="anime5">Noragami</string>
    <string name="cant1">8</string>
    <string name="cant2">10</string>
    <string name="cant3">7</string>
    <string name="cant4">10</string>
    <string name="cant5">12</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>