<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary_dark"
    tools:context=".ui.tienda" >

    <FrameLayout
        android:layout_width="375dp"
        android:layout_height="535dp"
        android:layout_gravity="center"
        android:background="@color/accent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="187.5dp"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/textView30"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="60dp"
                    android:gravity="center"
                    android:text="@string/anime" />

                <TextView
                    android:id="@+id/textView31"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="80dp"
                    android:gravity="center"
                    android:text="@string/anime2" />

                <TextView
                    android:id="@+id/textView32"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="100dp"
                    android:layout_marginBottom="50dp"
                    android:gravity="center"
                    android:text="@string/anime3" />

                <TextView
                    android:id="@+id/textView33"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:gravity="center"
                    android:text="@string/anime4" />

                <TextView
                    android:id="@+id/textView43"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="70dp"
                    android:gravity="center"
                    android:text="@string/anime5" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginRight="187.5dp"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView15"
                android:layout_width="159dp"
                android:layout_height="122dp"
                android:src="@drawable/jujutsu_kaisen_manga_volumen_22_jp" />

            <ImageView
                android:id="@+id/imageView16"
                android:layout_width="135dp"
                android:layout_height="116dp"
                android:src="@drawable/hunter_x" />

            <ImageView
                android:id="@+id/imageView17"
                android:layout_width="114dp"
                android:layout_height="101dp"
                android:src="@drawable/one_piece" />

            <ImageView
                android:id="@+id/imageView18"
                android:layout_width="144dp"
                android:layout_height="92dp"
                android:src="@drawable/naruto" />

            <ImageView
                android:id="@+id/imageView19"
                android:layout_width="149dp"
                android:layout_height="102dp"
                android:src="@drawable/noragami" />
        </LinearLayout>
    </FrameLayout>
</FrameLayout>